# bangular

./: BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  bower.json  browser-providers.conf.js  build.sh  gulpfile.js  karma-js.conf.js  package.json  protractor-e2e.conf.js  protractor-examples-e2e.conf.js  protractor-perf.conf.js  test-events.js  test-main.js  test.sh
aio/: .angular-cli.json  README.md  firebase.json  ngsw-manifest.json  package.json
aio/content/: file-not-found.md  navigation.json
aio/scripts/: check-environment.js  deploy-to-firebase.sh  deploy-to-firebase.test.sh
aio/src/: ie-polyfills.js  index.html  karma.conf.js  main.ts  polyfills.ts  pwa-manifest.json  tsconfig.app.json
aio/tools/: README.md  RELEASE.md
docs/: BAZEL.md  CARETAKER.md  COMMITTER.md  DEBUG.md  DEVELOPER.md  NAMING.md  PUBLIC_API.md  RELEASE_SCHEDULE.md  SAVED_REPLIES.md  TOOLS.md  TRIAGE_AND_LABELS.md
integration/: README.md  run_tests.sh
integration/bazel/: BUILD.bazel  WORKSPACE  angular.tsconfig.json  package.json
integration/bazel/src/hello-world/: BUILD.bazel  hello-world.component.ts  hello-world.module.ts
integration/cli-hello-world/: .angular-cli.json  README.md  karma.conf.js  package.json  protractor.conf.js
integration/dynamic-compiler/: package.json
integration/hello_world__closure/: closure.conf  package.json
integration/hello_world__render3__cli/: .angular-cli.json  README.md  package.json  protractor.conf.js
modules/: empty.ts  es6-subset.d.ts  tsconfig.json  types.d.ts
tools/: bazel.rc  check-environment.js
(+1411 files in other folders)
